# MCP-Agent

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  README.md  agent.py  app.py  pyproject.toml  requirements.txt  streamlit_app.py  test.ipynb
src/gradio_app/: app.py  run_local.py
src/mcp_agent/: __init__.py  agent.py
