[project]
name = "mcp-agent"
version = "0.1.0"
description = "MCP Agent for AI-powered task automation"
# hide for hugging face
# readme = "README.md"
requires-python = ">=3.13.2"
license = {text = "MIT"}
authors = [
    {name = "Tristan Padiou", email = "Padioutristan@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pydantic-ai==0.3.5",
    "gradio==5.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "pre-commit>=2.20.0",
]

[project.urls]
Homepage = "https://github.com/tristanpadiou/MCP-Agent"
Repository = "https://github.com/tristanpadiou/MCP-Agent"
Issues = "https://github.com/tristanpadiou/MCP-Agentissues"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "pre-commit>=2.20.0",
]



[tool.black]
line-length = 100
target-version = ['py313']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"] 